[gd_scene load_steps=24 format=2]

[ext_resource path="res://World/pictures/exterior/A4_Castle_Rasak.png" type="Texture" id=1]
[ext_resource path="res://World/world objects/forest1.tres" type="TileSet" id=2]
[ext_resource path="res://World/Tree.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/tree3.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Tree2.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/world objects/tree4.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/world objects/tree5.tscn" type="PackedScene" id=7]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/KinematicBody2D.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/room/chapter2_entrance.tscn" type="PackedScene" id=10]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://intro/pause_menu.tscn" type="PackedScene" id=13]
[ext_resource path="res://levels/Script/classoria_Gates.gd" type="Script" id=14]
[ext_resource path="res://intro/picture/pause.png" type="Texture" id=15]
[ext_resource path="res://Enemies/small_demon.tscn" type="PackedScene" id=16]
[ext_resource path="res://Enemies/monster_stone.tscn" type="PackedScene" id=17]
[ext_resource path="res://UI/heart_spawn.tscn" type="PackedScene" id=18]
[ext_resource path="res://World/magical chest.tscn" type="PackedScene" id=19]
[ext_resource path="res://World/path_arrow.tscn" type="PackedScene" id=20]

[sub_resource type="TileSet" id=1]
0/name = "A4_Castle_Rasak.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 384, 528, 96, 192 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "A4_Castle_Rasak.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 288, 608, 96, 112 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "A4_Castle_Rasak.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 480, 48, 48 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 13.5 )

[sub_resource type="DynamicFont" id=2]
size = 5
font_data = ExtResource( 11 )

[node name="classoria_Gates" type="Node2D"]
position = Vector2( 4, -3 )
script = ExtResource( 14 )

[node name="floor1" type="TileMap" parent="."]
position = Vector2( 236, 163 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -589839, 4, 0, -589838, 4, 0, -589837, 4, 0, -589836, 4, 0, -589835, 4, 0, -589834, 4, 0, -589833, 4, 0, -589832, 4, 0, -589831, 4, 0, -589830, 4, 0, -589829, 4, 0, -589828, 4, 0, -589827, 4, 0, -589826, 5, 65538, -589825, 5, 5, -655360, 5, 5, -655359, 5, 5, -655358, 5, 5, -655357, 5, 5, -655356, 5, 5, -655355, 5, 65536, -655354, 4, 0, -655353, 4, 0, -655352, 4, 1, -655351, 4, 0, -655350, 4, 0, -655349, 4, 0, -655348, 4, 0, -655347, 4, 0, -655346, 4, 0, -655345, 4, 0, -655344, 4, 0, -655343, 4, 0, -524303, 4, 0, -524302, 4, 0, -524301, 4, 0, -524300, 4, 0, -524299, 4, 0, -524298, 4, 0, -524297, 4, 0, -524296, 4, 65537, -524295, 4, 0, -524294, 4, 0, -524293, 4, 65536, -524292, 4, 0, -524291, 4, 1, -524290, 5, 65538, -524289, 5, 5, -589824, 5, 5, -589823, 5, 5, -589822, 5, 5, -589821, 5, 5, -589820, 5, 5, -589819, 5, 65536, -589818, 4, 0, -589817, 4, 0, -589816, 4, 0, -589815, 4, 0, -589814, 4, 0, -589813, 4, 0, -589812, 4, 0, -589811, 4, 0, -589810, 4, 0, -589809, 4, 0, -589808, 4, 1, -589807, 4, 0, -458767, 4, 0, -458766, 4, 0, -458765, 4, 0, -458764, 4, 0, -458763, 4, 0, -458762, 4, 0, -458761, 4, 0, -458760, 4, 0, -458759, 4, 0, -458758, 4, 65536, -458757, 4, 0, -458756, 4, 0, -458755, 4, 0, -458754, 5, 65538, -458753, 5, 5, -524288, 5, 5, -524287, 5, 5, -524286, 5, 5, -524285, 5, 5, -524284, 5, 5, -524283, 5, 65536, -524282, 4, 0, -524281, 4, 65537, -524280, 4, 0, -524279, 4, 0, -524278, 4, 0, -524277, 4, 0, -524276, 4, 0, -524275, 4, 0, -524274, 4, 65536, -524273, 4, 65536, -524272, 4, 0, -524271, 4, 0, -393231, 4, 0, -393230, 4, 0, -393229, 4, 0, -393228, 4, 0, -393227, 4, 0, -393226, 4, 0, -393225, 4, 0, -393224, 4, 0, -393223, 4, 0, -393222, 4, 0, -393221, 4, 0, -393220, 4, 0, -393219, 4, 0, -393218, 5, 65538, -393217, 5, 5, -458752, 5, 5, -458751, 5, 5, -458750, 5, 5, -458749, 5, 5, -458748, 5, 5, -458747, 5, 65536, -458746, 4, 0, -458745, 4, 0, -458744, 4, 65536, -458743, 4, 65537, -458742, 4, 0, -458741, 4, 0, -458740, 4, 65537, -458739, 4, 0, -458738, 4, 0, -458737, 4, 0, -458736, 4, 0, -458735, 4, 0, -327695, 4, 0, -327694, 4, 0, -327693, 4, 0, -327692, 4, 0, -327691, 4, 0, -327690, 4, 0, -327689, 4, 0, -327688, 4, 65536, -327687, 4, 0, -327686, 4, 65536, -327685, 4, 0, -327684, 4, 1, -327683, 4, 0, -327682, 5, 65538, -327681, 5, 5, -393216, 5, 5, -393215, 5, 5, -393214, 5, 5, -393213, 5, 5, -393212, 5, 5, -393211, 5, 65536, -393210, 4, 0, -393209, 4, 0, -393208, 4, 0, -393207, 4, 0, -393206, 4, 0, -393205, 4, 0, -393204, 4, 0, -393203, 4, 0, -393202, 4, 0, -393201, 4, 65537, -393200, 4, 0, -393199, 4, 0, -262159, 4, 0, -262158, 4, 0, -262157, 4, 0, -262156, 4, 0, -262155, 4, 0, -262154, 4, 0, -262153, 4, 0, -262152, 4, 0, -262151, 4, 1, -262150, 4, 0, -262149, 4, 65537, -262148, 4, 0, -262147, 4, 0, -262146, 5, 65538, -262145, 5, 5, -327680, 5, 5, -327679, 5, 5, -327678, 5, 5, -327677, 5, 5, -327676, 5, 5, -327675, 5, 65536, -327674, 4, 0, -327673, 4, 0, -327672, 4, 0, -327671, 4, 0, -327670, 4, 0, -327669, 4, 65536, -327668, 4, 65536, -327667, 4, 0, -327666, 4, 0, -327665, 4, 0, -327664, 4, 0, -327663, 4, 0, -196623, 4, 0, -196622, 4, 0, -196621, 4, 0, -196620, 4, 0, -196619, 4, 0, -196618, 10, 1, -196617, 4, 0, -196616, 4, 0, -196615, 4, 0, -196614, 4, 0, -196613, 4, 0, -196612, 4, 0, -196611, 4, 0, -196610, 5, 65538, -196609, 5, 5, -262144, 5, 5, -262143, 5, 5, -262142, 5, 5, -262141, 5, 5, -262140, 5, 5, -262139, 5, 65536, -262138, 4, 0, -262137, 4, 0, -262136, 4, 0, -262135, 4, 0, -262134, 4, 0, -262133, 4, 0, -262132, 4, 1, -262131, 4, 65536, -262130, 4, 0, -262129, 4, 0, -262128, 4, 0, -262127, 4, 0, -131087, 4, 0, -131086, 4, 0, -131085, 4, 0, -131084, 4, 0, -131083, 4, 0, -131082, 4, 0, -131081, 4, 0, -131080, 4, 0, -131079, 4, 0, -131078, 4, 65537, -131077, 4, 0, -131076, 4, 0, -131075, 4, 0, -131074, 5, 5, -131073, 5, 5, -196608, 5, 5, -196607, 5, 5, -196606, 5, 5, -196605, 5, 5, -196604, 5, 5, -196603, 5, 5, -196602, 4, 65537, -196601, 4, 0, -196600, 4, 0, -196599, 4, 0, -196598, 4, 65536, -196597, 4, 0, -196596, 4, 65536, -196595, 4, 0, -196594, 4, 0, -196593, 4, 65536, -196592, 4, 0, -196591, 4, 0, -65551, 4, 0, -65550, 4, 0, -65549, 4, 0, -65548, 4, 0, -65547, 4, 0, -65546, 4, 0, -65545, 4, 0, -65544, 4, 1, -65543, 4, 65536, -65542, 4, 0, -65541, 4, 0, -65540, 4, 0, -65539, 4, 65536, -65538, 5, 5, -65537, 5, 5, -131072, 5, 5, -131071, 5, 5, -131070, 5, 5, -131069, 5, 5, -131068, 5, 5, -131067, 5, 5, -131066, 4, 1, -131065, 4, 0, -131064, 4, 0, -131063, 4, 1, -131062, 4, 65536, -131061, 4, 65537, -131060, 4, 65536, -131059, 4, 0, -131058, 4, 0, -131057, 4, 0, -131056, 4, 0, -131055, 4, 0, -15, 4, 0, -14, 4, 0, -13, 4, 0, -12, 4, 0, -11, 4, 0, -10, 4, 0, -9, 4, 0, -8, 4, 0, -7, 4, 0, -6, 4, 0, -5, 4, 0, -4, 4, 65537, -3, 4, 0, -2, 5, 65538, -1, 5, 5, -65536, 5, 5, -65535, 5, 5, -65534, 5, 5, -65533, 5, 5, -65532, 5, 5, -65531, 5, 65536, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 65536, -65525, 4, 65536, -65524, 4, 0, -65523, 4, 0, -65522, 4, 1, -65521, 4, 0, -65520, 4, 0, -65519, 4, 65537, 65521, 4, 0, 65522, 4, 0, 65523, 4, 0, 65524, 4, 0, 65525, 4, 0, 65526, 4, 0, 65527, 4, 0, 65528, 4, 0, 65529, 4, 0, 65530, 4, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 5, 65538, 65535, 5, 5, 0, 5, 5, 1, 5, 5, 2, 5, 5, 3, 5, 5, 4, 5, 5, 5, 5, 65536, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 65537, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 16, 4, 0, 17, 4, 0, 131057, 4, 0, 131058, 4, 0, 131059, 4, 0, 131060, 4, 0, 131061, 4, 0, 131062, 4, 0, 131063, 4, 0, 131064, 4, 65537, 131065, 4, 65536, 131066, 4, 0, 131067, 4, 1, 131068, 4, 0, 131069, 4, 0, 131070, 5, 65538, 131071, 5, 5, 65536, 5, 5, 65537, 5, 5, 65538, 5, 5, 65539, 5, 5, 65540, 5, 5, 65541, 5, 65536, 65542, 4, 0, 65543, 4, 0, 65544, 4, 65537, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 65537, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 196593, 4, 0, 196594, 4, 0, 196595, 4, 0, 196596, 4, 0, 196597, 4, 0, 196598, 4, 0, 196599, 4, 0, 196600, 4, 0, 196601, 4, 0, 196602, 4, 0, 196603, 4, 0, 196604, 4, 65536, 196605, 4, 0, 196606, 5, 65538, 196607, 5, 5, 131072, 5, 5, 131073, 5, 5, 131074, 5, 5, 131075, 5, 5, 131076, 5, 5, 131077, 5, 65536, 131078, 4, 0, 131079, 4, 0, 131080, 4, 65536, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 65536, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 262129, 4, 0, 262130, 4, 0, 262131, 4, 0, 262132, 4, 0, 262133, 4, 0, 262134, 4, 0, 262135, 4, 0, 262136, 4, 0, 262137, 4, 65537, 262138, 4, 0, 262139, 4, 0, 262140, 4, 65537, 262141, 4, 0, 262142, 5, 65538, 262143, 5, 5, 196608, 5, 5, 196609, 5, 5, 196610, 5, 5, 196611, 5, 5, 196612, 5, 5, 196613, 5, 65536, 196614, 4, 65537, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 65536, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 65536, 196625, 4, 0, 327665, 4, 0, 327666, 4, 0, 327667, 4, 0, 327668, 4, 0, 327669, 4, 0, 327670, 4, 0, 327671, 4, 0, 327672, 4, 0, 327673, 4, 0, 327674, 4, 1, 327675, 4, 0, 327676, 4, 0, 327677, 4, 0, 327678, 5, 65538, 327679, 5, 5, 262144, 5, 5, 262145, 5, 5, 262146, 5, 5, 262147, 5, 5, 262148, 5, 5, 262149, 5, 65536, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 1, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0 )

[node name="floor2" type="TileMap" parent="."]
position = Vector2( 236, 163 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -131082, 7, 131072, -131081, 7, 65536, -131080, 7, 65536, -131079, 7, 65536, -131078, 7, 65536, -131077, 7, 131072, -131076, 7, 131072, -131074, 5, 131074, -196603, 5, 131072, -196601, 7, 65536, -196600, 7, 65536, -196599, 7, 65536, -196598, 7, 131072, -196597, 7, 65536, -196596, 7, 65536, -196595, 7, 65536, -196594, 7, 65536, -196593, 7, 65536, -196592, 7, 131072, -196591, 7, 65536, -65546, 7, 65536, -65545, 7, 131072, -65544, 7, 65536, -65543, 7, 131072, -65542, 7, 65536, -65541, 7, 65536, -65540, 7, 65536, -131065, 7, 131072, -131064, 7, 65536, -131063, 7, 65536, -131062, 7, 65536, -131061, 7, 131072, -131060, 7, 65536, -131059, 7, 65536, -131058, 7, 131072, -131057, 7, 65536, -131056, 7, 65536, -131055, 7, 131072 )

[node name="floor3" type="TileMap" parent="."]
position = Vector2( 236, 163 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -131078, 7, 1, -131075, 21, 65536, -131074, 21, 65537, -131073, 21, 65537, -196608, 21, 65537, -196607, 21, 65537, -196606, 21, 65537, -196605, 21, 65537, -196604, 21, 65537, -196603, 21, 65537, -196602, 21, 65538, -196601, 7, 1, -196594, 7, 1, -65545, 7, 1, -65539, 21, 65536, -65538, 21, 65537, -65537, 21, 65537, -131072, 21, 65537, -131071, 21, 65537, -131070, 21, 65537, -131069, 21, 65537, -131068, 21, 65537, -131067, 21, 65537, -131066, 21, 65538, -131062, 7, 1 )

[node name="floor4" type="TileMap" parent="."]
position = Vector2( 236, 163 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
show_collision = true
format = 1
tile_data = PoolIntArray( -131082, 11, 1, -131081, 11, 1, -131080, 11, 1, -131079, 11, 1, -131078, 11, 1, -131077, 11, 1, -131076, 11, 2, -131074, 21, 65537, -131073, 21, 65537, -196608, 21, 65537, -196607, 21, 65537, -196606, 21, 65537, -196605, 21, 65537, -196604, 21, 65537, -196603, 21, 65537, -196602, 21, 65538, -196601, 11, 0, -196600, 11, 1, -196599, 11, 1, -196598, 11, 1, -196597, 11, 1, -196596, 11, 1, -196595, 11, 1, -196594, 11, 1, -196593, 11, 1, -196592, 11, 1, -196591, 11, 1, -65546, 11, 131073, -65545, 11, 131073, -65544, 11, 131073, -65543, 11, 131073, -65542, 11, 131073, -65541, 11, 131073, -65540, 11, 131074, -65539, 21, 65536, -65538, 21, 65537, -65537, 21, 65537, -131072, 21, 65537, -131071, 21, 65537, -131070, 21, 65537, -131069, 21, 65537, -131068, 21, 65537, -131067, 21, 65537, -131066, 21, 65538, -131065, 11, 131072, -131064, 11, 131073, -131063, 11, 131073, -131062, 11, 131073, -131061, 11, 131073, -131060, 11, 131073, -131059, 11, 131073, -131058, 11, 131073, -131057, 11, 131073, -131056, 11, 131073, -131055, 11, 131073 )

[node name="wall1" type="TileMap" parent="."]
position = Vector2( 236, 163 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -589839, 0, 131074, -589838, 0, 131074, -589837, 0, 131074, -589836, 0, 131074, -589835, 0, 131074, -589834, 0, 131074, -524303, 0, 131074, -524302, 0, 131074, -524301, 0, 131074, -524300, 0, 131074, -524299, 0, 131074, -524298, 0, 131074, -458767, 0, 131074, -458766, 0, 131074, -458765, 0, 131074, -458764, 0, 131074, -458763, 0, 131074, -458762, 0, 131074, -393231, 0, 131074, -393230, 0, 131074, -393229, 0, 131074, -393228, 0, 131074, -393227, 0, 131074, -393226, 0, 131074, -327695, 0, 131074, -327694, 0, 131074, -327693, 0, 131074, -327692, 0, 131074, -327691, 0, 131074, -327690, 0, 131074, -262159, 0, 196611, -262158, 0, 196609, -262157, 0, 196610, -262156, 0, 196612, -262155, 0, 196613, -196623, 0, 196611, -196622, 0, 196609, -196621, 0, 196610, -196620, 0, 196612, -196619, 0, 196613, -131087, 0, 196611, -131086, 0, 196609, -131085, 0, 196610, -131084, 0, 196612, -131083, 0, 196613, -65551, 0, 196611, -65550, 0, 196609, -65549, 0, 196610, -65548, 0, 196612, -65547, 0, 196613, -15, 0, 131074, -14, 0, 131074, -13, 0, 131074, -12, 0, 131074, -11, 0, 196613, -10, 0, 131074, 65521, 0, 131074, 65522, 0, 131074, 65523, 0, 131074, 65524, 0, 131074, 65525, 0, 131074, 65526, 0, 131074, 131057, 0, 131074, 131058, 0, 131074, 131059, 0, 131074, 131060, 0, 131074, 131061, 0, 131074, 131062, 0, 131074, 196593, 0, 131074, 196594, 0, 131074, 196595, 0, 131074, 196596, 0, 131074, 196597, 0, 131074, 196598, 0, 131074, 262129, 0, 131074, 262130, 0, 131074, 262131, 0, 131074, 262132, 0, 131074, 262133, 0, 131074, 262134, 0, 131074, 327665, 0, 131074, 327666, 0, 131074, 327667, 0, 131074, 327668, 0, 131074, 327669, 0, 131074, 327670, 0, 131074 )

[node name="wall2" type="TileMap" parent="."]
position = Vector2( 236, 163 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -589839, 0, 65538, -589838, 0, 65537, -589837, 0, 65538, -589836, 0, 65539, -589835, 0, 65540, -589834, 0, 65541, -524298, 0, 131077, -458762, 0, 196613, -393231, 0, 262146, -393230, 0, 262147, -393229, 0, 262146, -393228, 0, 262147, -393227, 0, 262148, -393226, 0, 262149, -327695, 0, 327682, -327694, 0, 327683, -327693, 0, 327682, -327692, 0, 327683, -327691, 2, 131073, -327690, 2, 131074, -262155, 0, 196613, -262154, 0, 655365, -196619, 0, 196613, -196618, 0, 720901, -131083, 0, 196613, -65547, 0, 196613, -15, 0, 2, -14, 0, 3, -13, 0, 2, -12, 0, 3, -11, 0, 4, -10, 0, 5, 65521, 0, 65537, 65522, 0, 65537, 65523, 0, 65538, 65524, 0, 65539, 65525, 0, 65540, 65526, 0, 65541, 131057, 0, 196612, 131058, 0, 196612, 131059, 0, 196612, 131060, 0, 196612, 131061, 0, 196612, 131062, 0, 131077, 196593, 0, 196612, 196594, 0, 196612, 196595, 0, 196612, 196596, 0, 196612, 196597, 0, 196612, 196598, 0, 196613, 262129, 0, 262146, 262130, 0, 262147, 262131, 0, 262146, 262132, 0, 262147, 262133, 0, 262148, 262134, 0, 262149, 327665, 0, 327682, 327666, 0, 327683, 327667, 0, 327682, 327668, 0, 327683, 327669, 0, 327684, 327670, 0, 327685 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 488, 131 )
z_index = 1

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/player"]
remote_path = NodePath("../../../Camera2D")

[node name="objects" type="YSort" parent="YSort"]
position = Vector2( 194, -20 )

[node name="Tree" parent="YSort/objects" instance=ExtResource( 3 )]
position = Vector2( -101, -28 )

[node name="Tree2" parent="YSort/objects" instance=ExtResource( 5 )]
position = Vector2( 11.0001, -52 )
scale = Vector2( 0.7, 0.7 )

[node name="Tree4" parent="YSort/objects" instance=ExtResource( 5 )]
position = Vector2( 186, 51 )
scale = Vector2( 0.7, 0.7 )

[node name="Tree3" parent="YSort/objects" instance=ExtResource( 4 )]
position = Vector2( 159, -62 )

[node name="tree4" parent="YSort/objects" instance=ExtResource( 6 )]
position = Vector2( 240, -37 )

[node name="tree5" parent="YSort/objects" instance=ExtResource( 6 )]
position = Vector2( -41, 94 )

[node name="tree7" parent="YSort/objects" instance=ExtResource( 6 )]
position = Vector2( 225, 171 )

[node name="tree6" parent="YSort/objects" instance=ExtResource( 6 )]
position = Vector2( -75, 208 )

[node name="tree8" parent="YSort/objects" instance=ExtResource( 6 )]
position = Vector2( -9, 180 )

[node name="tree13" parent="YSort/objects" instance=ExtResource( 7 )]
position = Vector2( 286, -50 )

[node name="tree15" parent="YSort/objects" instance=ExtResource( 7 )]
position = Vector2( 180, 208 )

[node name="tree16" parent="YSort/objects" instance=ExtResource( 7 )]
position = Vector2( 290, 183 )

[node name="tree17" parent="YSort/objects" instance=ExtResource( 7 )]
position = Vector2( 240, 251 )

[node name="tree19" parent="YSort/objects" instance=ExtResource( 7 )]
position = Vector2( -24, 249 )

[node name="tree18" parent="YSort/objects" instance=ExtResource( 7 )]
position = Vector2( -64, 42 )

[node name="tree14" parent="YSort/objects" instance=ExtResource( 7 )]
position = Vector2( 264, 70 )

[node name="enemies" type="YSort" parent="YSort"]

[node name="small_demon" parent="YSort/enemies" instance=ExtResource( 16 )]
position = Vector2( 324, 140 )
slime_id = "demon1"

[node name="small_demon2" parent="YSort/enemies" instance=ExtResource( 16 )]
position = Vector2( 283, 140 )
slime_id = "demon2"

[node name="small_demon3" parent="YSort/enemies" instance=ExtResource( 16 )]
position = Vector2( 297, 124 )
slime_id = "demon3"

[node name="small_demon4" parent="YSort/enemies" instance=ExtResource( 16 )]
position = Vector2( 242, 126 )
slime_id = "demon4"

[node name="small_demon5" parent="YSort/enemies" instance=ExtResource( 16 )]
position = Vector2( 220, 138 )
slime_id = "demon5"

[node name="monster_stone" parent="YSort/enemies" instance=ExtResource( 17 )]
position = Vector2( 116, 108 )
slime_id = "stone1"

[node name="monster_stone2" parent="YSort/enemies" instance=ExtResource( 17 )]
position = Vector2( 111, 157 )
slime_id = "stone2"

[node name="loot" type="YSort" parent="YSort"]

[node name="magical_chest" parent="YSort/loot" instance=ExtResource( 19 )]
position = Vector2( 104, 77 )

[node name="heart_spawn" parent="YSort/loot" instance=ExtResource( 18 )]
position = Vector2( 104, 226 )
heart_id = "puso8"

[node name="heart_spawn2" parent="YSort/loot" instance=ExtResource( 18 )]
position = Vector2( 133, 227 )
heart_id = "puso7"

[node name="magical_chest2" parent="YSort/loot" instance=ExtResource( 19 )]
position = Vector2( 156, 78 )

[node name="heart_spawn3" parent="YSort/loot" instance=ExtResource( 18 )]
position = Vector2( 428, 186 )
heart_id = "puso9"

[node name="heart_spawn4" parent="YSort/loot" instance=ExtResource( 18 )]
position = Vector2( 422, 39 )
heart_id = "puso10"

[node name="dialogue" type="Area2D" parent="YSort"]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/dialogue"]
position = Vector2( 75, 126.5 )
shape = SubResource( 3 )

[node name="Camera2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 488, 131 )

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2( 528, 240 )

[node name="forest2Chap2_pos" type="Position2D" parent="."]
position = Vector2( 486, 129 )

[node name="forest2Chap2" parent="." instance=ExtResource( 10 )]
position = Vector2( 519, 129 )
rotation = 3.14159

[node name="TopUi" type="CanvasLayer" parent="."]

[node name="pause_game" type="TextureButton" parent="TopUi"]
margin_left = 292.0
margin_top = 3.0
margin_right = 312.0
margin_bottom = 23.0
texture_normal = ExtResource( 15 )

[node name="HealthUI" parent="TopUi" instance=ExtResource( 12 )]
margin_left = 3.0
margin_top = 3.0
margin_right = 63.0
margin_bottom = 14.0

[node name="quest" type="TextureButton" parent="TopUi"]
margin_right = 40.0
margin_bottom = 40.0

[node name="pause_menu" parent="TopUi" instance=ExtResource( 13 )]

[node name="Label2" type="Label" parent="TopUi"]
margin_left = 132.0
margin_top = 8.0
margin_right = 205.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="classoriaMain_pos" type="Position2D" parent="."]
position = Vector2( 107, 129 )

[node name="classoriaMain" parent="." instance=ExtResource( 10 )]
position = Vector2( 75, 128 )

[node name="path_arrow_main" parent="." instance=ExtResource( 20 )]
tile_data = PoolIntArray( 7929929, 0, 0 )

[node name="path_arrow_way" parent="." instance=ExtResource( 20 )]
tile_data = PoolIntArray( 8126980, 0, 0 )

[connection signal="body_shape_entered" from="YSort/dialogue" to="." method="_on_dialogue_body_shape_entered_dialogue"]
[connection signal="pressed" from="TopUi/pause_game" to="." method="_on_pause_game_pressed"]

[editable path="Camera2D"]
